--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.4",
+    "@types/glob": "^8.1.0",
+    "@types/mdx": "^2.0.5",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
